# github-actions-masterclass

./: .editorconfig  .gitignore  01-node.yml  README.md  package.json
.github/: pull_request_template.md
.github/workflows/: 01-building-blocks.yaml  01-simple-trigger.yml  02-check-python.yml  02-workflow-events.yaml  03-workflow-runners.yml  04-third-party-actions.yml  04-using-actions.yml  05--1-filters-activity-types.yml  main.yml
04-using-actions/react-app/: package-lock.json
backup/: 01-building-blocks.yaml  02-workflow-events.yaml  04-using-actions.yml  package-lock.json
backup/github/workflows/: 02-simple-demo.yml
data-analysis/: hello.py  pyproject.toml
react-app/: package-lock.json
